<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <!--Put form controls here-->
        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cupboard_form_title"
            android:textSize="10pt">
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/EditProductNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_product_name_label"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/EditProductName"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_hint"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </EditText>
        </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/EditProductNotesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_notes_label"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/EditNotes"
                android:layout_height="wrap_content"
                android:hint="@string/product_notes_hint"
                android:layout_width="fill_parent">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/EditProductLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_location_label"
                android:textSize="10pt">
            </TextView>
            <EditText
                android:id="@+id/EditLocation"
                android:layout_height="wrap_content"
                android:hint="@string/product_location_hint"
                android:layout_width="fill_parent">
            </EditText>
        </LinearLayout>
        <Button
        android:id="@+id/ConfirmProductEdit"
        android:layout_height="wrap_content"
        android:text="@string/product_done"
        android:onClick="editProduct"
        android:layout_width="fill_parent">
    </Button>
    <Button
        android:id="@+id/CancelProductEdit"
        android:layout_height="wrap_content"
        android:text="@string/product_done"
        android:onClick="cancelProduct"
        android:layout_width="fill_parent">
    </Button>

    </LinearLayout>
</ScrollView>
